workspace/log/build_2025-03-24_15-54-10/control_bolide/stdout_stderr.log
running egg_info
writing ../../build/control_bolide/control_bolide.egg-info/PKG-INFO
writing dependency_links to ../../build/control_bolide/control_bolide.egg-info/dependency_links.txt
writing entry points to ../../build/control_bolide/control_bolide.egg-info/entry_points.txt
writing requirements to ../../build/control_bolide/control_bolide.egg-info/requires.txt
writing top-level names to ../../build/control_bolide/control_bolide.egg-info/top_level.txt
reading manifest file '../../build/control_bolide/control_bolide.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/control_bolide/control_bolide.egg-info/SOURCES.txt'
running build
running build_py
copying control_bolide/stanley_controller.py -> /home/voiture/course_2025_slam_pkgs/workspace/build/control_bolide/build/lib/control_bolide
running install
running install_lib
copying /home/voiture/course_2025_slam_pkgs/workspace/build/control_bolide/build/lib/control_bolide/stanley_controller.py -> /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/python3.12/site-packages/control_bolide
byte-compiling /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/python3.12/site-packages/control_bolide/stanley_controller.py to stanley_controller.cpython-312.pyc
  File "/home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/python3.12/site-packages/control_bolide/stanley_controller.py", line 16
    from "python3-inputimeout-pip" import inputimeout, TimeoutOccurred
         ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/python3.12/site-packages/control_bolide-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/control_bolide/control_bolide.egg-info to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/python3.12/site-packages/control_bolide-0.0.0-py3.12.egg-info
running install_scripts
Installing ackermann_controller script to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/control_bolide
Installing calibration_direction script to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/control_bolide
Installing calibration_direction_copy script to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/control_bolide
Installing cmd_vel_vizu script to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/control_bolide
Installing obstacle_detection script to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/control_bolide
Installing speed_direction_controller script to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/control_bolide
Installing stanley_controller script to /home/voiture/course_2025_slam_pkgs/workspace/install/control_bolide/lib/control_bolide
writing list of installed files to '/home/voiture/course_2025_slam_pkgs/workspace/build/control_bolide/install.log'
